--- a/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
@@ -18,11 +18,26 @@
         android:layout_alignParentRight="true"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="20dp"
-        android:text="P"
+        android:text="@string/parking"
         android:textStyle="bold"
         android:textSize="30sp"
         android:textColor="@color/white"
         android:background="@drawable/circle_button"
         android:onClick="sendPosition"/>
+
+    <Button
+        android:id="@+id/toGroup"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="@string/add"
+        android:textStyle="bold"
+        android:textSize="40sp"
+        android:textColor="@color/white"
+        android:background="@drawable/circle_button"
+        android:onClick="manageGroup"/>
 </RelativeLayout>
 
