--- a/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
@@ -22,6 +22,7 @@
         android:textStyle="bold"
         android:textSize="30sp"
         android:textColor="@color/white"
+        android:gravity="center_vertical|center_horizontal"
         android:background="@drawable/circle_button"
         android:onClick="sendPosition"/>
 
@@ -37,6 +38,7 @@
         android:textStyle="bold"
         android:textSize="40sp"
         android:textColor="@color/white"
+        android:gravity="center_vertical|center_horizontal"
         android:background="@drawable/circle_button"
         android:onClick="manageGroup"/>
 </RelativeLayout>
