--- a/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
@@ -1,25 +1,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/soft_gray"
+    android:background="@color/trasparent"
     android:padding="15dp">
 
-    <ImageView
-        android:id="@+id/contact_image_iv"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_alignParentLeft="true"
-        android:layout_centerHorizontal="true"/>
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true">
 
-    <TextView
-        android:id="@+id/contact_name_tv"
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:layout_marginLeft="10dp"
-        android:layout_toRightOf="@id/contact_image_iv"
-        android:layout_toEndOf="@id/contact_image_iv"
-        android:textColor="@color/black"
-        android:textSize="15sp" />
+        <ImageView
+            android:id="@+id/contact_image_iv"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/user"/>
+
+        <TextView
+            android:id="@+id/contact_name_tv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@id/contact_image_iv"
+            android:layout_toEndOf="@id/contact_image_iv"
+            android:layout_centerVertical="true"
+            android:text="Francesco Nobilia"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
