--- a/Android/FamilyParking/app/src/main/res/layout/activity_manage_group.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/activity_manage_group.xml
@@ -1,10 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:layout_centerInParent="true"
     android:orientation="vertical"
     android:background="@color/trasparent"
+    android:onClick="closeActivity"
+    android:clickable="true"
     tools:context=".ManageGroupDialog">
 
     <RelativeLayout
