--- a/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
@@ -17,17 +17,32 @@
             android:layout_centerHorizontal="true"
             android:src="@drawable/user"/>
 
-        <TextView
-            android:id="@+id/contact_name_tv"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_toRightOf="@id/contact_image_iv"
-            android:layout_toEndOf="@id/contact_image_iv"
             android:layout_centerVertical="true"
-            android:text="Francesco Nobilia"
-            android:textColor="@color/black"
-            android:textSize="15sp" />
+            android:layout_toRightOf="@id/contact_image_iv"
+            android:layout_toEndOf="@id/contact_image_iv">
+
+            <TextView
+                android:id="@+id/contact_name_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Francesco Nobilia"
+                android:textColor="@color/black"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/contact_email_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/contact_name_tv"
+                android:text="f.nobilia@gmail.com"
+                android:textColor="@color/gray"
+                android:textSize="14sp" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
