--- a/Android/FamilyParking/app/src/main/res/layout/activity_manage_group.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/activity_manage_group.xml
@@ -18,13 +18,16 @@
         android:visibility="gone"
         android:background="@drawable/abc_popup_background_mtrl_mult">
 
-        <LinearLayout
-            android:id="@+id/group_ll"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:scrollbarAlwaysDrawHorizontalTrack="true"
-            android:orientation="horizontal"/>
+        <org.lucasr.twowayview.TwoWayView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/group_list"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            style="@style/TwoWayView"
+            android:drawSelectorOnTop="false"
+            tools:context=".ManageGroupDialog"/>
 
     </RelativeLayout>
 
