--- a/Android/FamilyParking/app/src/main/res/values/styles.xml
+++ b/Android/FamilyParking/app/src/main/res/values/styles.xml
@@ -15,4 +15,8 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
+    <style name="TwoWayView">
+        <item name="android:orientation">horizontal</item>
+    </style>
+
 </resources>
