--- a/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
@@ -5,6 +5,7 @@
     android:padding="15dp">
 
     <RelativeLayout
+        android:id="@+id/contact_rl_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
@@ -45,6 +46,19 @@
         </RelativeLayout>
 
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/add_contact_button_item"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:text="@string/add_contact"
+        android:textSize="15sp"
+        android:textColor="@color/black"
+        android:clickable="true"
+        android:onClick="addNewContact"
+        android:visibility="gone"
+        android:background="@color/trasparent"/>
 
 </RelativeLayout>
 
