--- a/Android/FamilyParking/app/src/main/res/layout/progress_circle_dialog.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/progress_circle_dialog.xml
@@ -16,11 +16,9 @@
 
         <ProgressBar
             android:id="@+id/progress_dialog"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginRight="10dp"
-            style="?android:attr/progressBarStyleLarge">
-        </ProgressBar>
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginRight="10dp"/>
 
         <TextView
             android:id="@+id/message_dialog"
