--- a/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/activity_maps.xml
@@ -10,6 +10,27 @@
         android:layout_height="match_parent"
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
+    <RelativeLayout
+        android:id="@+id/group_rl_main_activity"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_margin="20dp"
+        android:visibility="gone">
+
+        <org.lucasr.twowayview.TwoWayView
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/group_list_main_activity"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            style="@style/TwoWayView"
+            android:drawSelectorOnTop="false"
+            tools:context=".ManageGroupDialog"/>
+
+    </RelativeLayout>
+
     <Button
         android:id="@+id/toPark"
         android:layout_width="55dp"
