--- a/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/user"/>
+            android:src="@drawable/userw"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
