Revert "Bug fix"
This reverts commit fcd111cf089bc7fac780c96b720696a238c60251.

--- a/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking/app/src/main/res/layout/contact_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/userw"/>
+            android:src="@drawable/user"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
