--- a/Android/FamilyParking/app/src/debug/res/values/google_maps_api.xml
+++ b/Android/FamilyParking/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyAA1ikydRb1i6k1ShhtRJ19hP6MzSBZjKc</string>
+    <!--<string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyAA1ikydRb1i6k1ShhtRJ19hP6MzSBZjKc</string>-->
+    <string name="google_maps_key" templateMergeStrategy="preserve">AIzaSyCC2LrYRXWwDV2WqH__4UmyzztTmN6Vae4</string>
 </resources>
