--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_map.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_map.xml
@@ -2,13 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity">
+    tools:context=".MapsActivity$Map">
 
     <fragment
         android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:name="com.google.android.gms.maps.SupportMapFragment" />
+        android:layout_height="match_parent"/>
 
     <RelativeLayout
         android:id="@+id/group_rl_main_activity"
@@ -21,13 +21,11 @@
         <org.lucasr.twowayview.TwoWayView
             xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/group_list_main_activity"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             style="@style/TwoWayView"
-            android:drawSelectorOnTop="false"
-            tools:context=".ManageGroupDialog"/>
+            android:drawSelectorOnTop="false"/>
 
     </RelativeLayout>
 
@@ -53,4 +51,5 @@
         android:background="@drawable/plus"
         android:onClick="manageGroup"/>
 </RelativeLayout>
+
 
