--- a/Android/FamilyParking2/app/src/main/res/values/styles.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/styles.xml
@@ -3,6 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/blue</item>
+        <item name="colorPrimaryDark">@color/dark_blue</item>
+        <item name="colorAccent">@color/blue</item>
     </style>
 
     <style name="AppTransparentTheme" parent="Theme.AppCompat.Light.DarkActionBar">
