--- a/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
@@ -94,7 +94,7 @@
                 android:text="@string/back"
                 android:textSize="15sp"
                 android:textColor="@color/gray"
-                android:background="@color/trasparent"/>
+                android:background="@color/transparent"/>
 
         </RelativeLayout>
 
@@ -124,7 +124,7 @@
                 android:text="@string/delete"
                 android:textSize="15sp"
                 android:textColor="@color/gray"
-                android:background="@color/trasparent"/>
+                android:background="@color/transparent"/>
 
         </RelativeLayout>
 
