--- a/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/trasparent"
+    android:background="@color/transparent"
     android:padding="15dp">
 
     <RelativeLayout
@@ -58,7 +58,7 @@
         android:clickable="true"
         android:onClick="addNewContact"
         android:visibility="gone"
-        android:background="@color/trasparent"/>
+        android:background="@color/transparent"/>
 
 </RelativeLayout>
 
