--- a/Android/FamilyParking2/app/src/main/res/values/color.xml
+++ b/Android/FamilyParking2/app/src/main/res/values/color.xml
@@ -5,7 +5,8 @@
     <color name="red">#E91D4A</color>
     <color name="dark_red">#C80F1D</color>
     <color name="green">#57B571</color>
-    <color name="dark_green">#3AAC4C</color>
+    <color name="fluo_green">#3AAC4C</color>
+    <color name="dark_green">#248240</color>
     <color name="yellow">#FDC13E</color>
     <color name="dark_yellow">#FFCE41</color>
     <color name="sapienza">#7F2632</color>
@@ -13,5 +14,6 @@
     <color name="black">#000000</color>
     <color name="gray">@android:color/darker_gray</color>
     <color name="soft_gray">#EEEEEE</color>
-    <color name="trasparent">@android:color/transparent</color>
+    <color name="soft_gray_transparent">#AAEEEEEE</color>
+    <color name="transparent">@android:color/transparent</color>
 </resources>
