--- a/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_item.xml
@@ -16,7 +16,7 @@
             android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerHorizontal="true"
-            android:src="@drawable/userw"/>
+            android:src="@drawable/user"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -56,7 +56,6 @@
         android:textSize="15sp"
         android:textColor="@color/black"
         android:clickable="true"
-        android:onClick="addNewContact"
         android:visibility="gone"
         android:background="@color/transparent"/>
 
