--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_signin.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_signin.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity$Car"
@@ -70,6 +71,17 @@
             android:background="@drawable/arrow_blue_up"
             android:clickable="false"
             android:onClick="onClick_SignIn"/>
+
+        <com.pnikosis.materialishprogress.ProgressWheel
+            android:id="@+id/progress_signIn"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/email_r"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            wheel:matProg_barColor="@color/blue"
+            wheel:matProg_progressIndeterminate="true" />
 
     </RelativeLayout>
 
