--- a/Android/FamilyParking2/app/src/main/res/layout/progress_circle_dialog.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/progress_circle_dialog.xml
@@ -1,32 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_centerInParent="true"
-    android:orientation="vertical"
-    android:background="@drawable/abc_popup_background_mtrl_mult">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/soft_gray_transparent">
 
-    <RelativeLayout
-        android:id="@+id/contact_rl_detail"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_margin="10dp">
+        android:layout_centerInParent="true"
+        android:orientation="vertical"
+        android:background="@drawable/abc_popup_background_mtrl_mult">
 
-        <ProgressBar
-            android:id="@+id/progress_dialog"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_marginRight="10dp"/>
-
-        <TextView
-            android:id="@+id/message_dialog"
+        <RelativeLayout
+            android:id="@+id/contact_rl_detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/progress_dialog"/>
+            android:layout_alignParentTop="true"
+            android:layout_margin="10dp">
 
+            <com.pnikosis.materialishprogress.ProgressWheel
+                android:id="@+id/progress_dialog"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                wheel:matProg_barColor="@color/blue"
+                wheel:matProg_progressIndeterminate="true" />
+
+            <TextView
+                android:id="@+id/message_dialog"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toRightOf="@id/progress_dialog"/>
+
+
+        </RelativeLayout>
 
     </RelativeLayout>
 
