--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_create_group.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_create_group.xml
@@ -1,10 +1,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:wheel="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/soft_gray_transparent"
     android:clickable="true"
-    tools:context=".MainActivity$Create">
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/relative_new_group_container"
@@ -38,6 +39,7 @@
                 android:layout_centerVertical="true"
                 android:textSize="16sp"
                 android:textColor="@color/black"
+                android:inputType="textCapSentences"
                 android:textColorHint="@color/gray"
                 android:background="@color/transparent"
                 android:singleLine="true"
@@ -97,6 +99,17 @@
             android:layout_centerHorizontal="true"
             android:background="@drawable/abc_ic_search_api_mtrl_alpha"
             android:backgroundTint="@color/blue" />
+
+        <com.pnikosis.materialishprogress.ProgressWheel
+            android:id="@+id/find_progress_circular"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_marginRight="15dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerHorizontal="true"
+            android:visibility="gone"
+            wheel:matProg_barColor="@color/blue"
+            wheel:matProg_progressIndeterminate="true" />
 
         <EditText
             android:id="@+id/find_contact_edt"
