--- a/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
@@ -75,7 +75,7 @@
                 android:id="@+id/back_rl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
+                android:layout_centerInParent="true"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="10dp"
                 android:clickable="true">
@@ -96,36 +96,6 @@
                     android:layout_toRightOf="@id/image_back"
                     android:layout_centerVertical="true"
                     android:text="@string/back"
-                    android:textSize="15sp"
-                    android:textColor="@color/gray"
-                    android:background="@color/transparent"/>
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/delete_rl"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:clickable="true">
-
-                <ImageView
-                    android:id="@+id/image_delete"
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
-                    android:layout_centerVertical="true"
-                    android:background="@android:drawable/ic_menu_delete"
-                    android:backgroundTint="@color/gray"/>
-
-                <TextView
-                    android:id="@+id/delete_detail"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/image_delete"
-                    android:text="@string/delete"
                     android:textSize="15sp"
                     android:textColor="@color/gray"
                     android:background="@color/transparent"/>
