--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_manage_group.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_manage_group.xml
@@ -30,11 +30,26 @@
                 android:layout_alignParentLeft="true"
                 android:background="@drawable/add_group"/>
 
+            <TextView
+                android:id="@+id/new_group_tv"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:visibility="gone"
+                android:layout_toRightOf="@id/new_group_iv"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="5dp"
+                android:textAlignment="center"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textSize="25sp"
+                android:textColor="@color/white"
+                android:background="@drawable/add_group"/>
+
             <EditText
                 android:id="@+id/new_group_name_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/new_group_iv"
+                android:layout_toRightOf="@id/new_group_tv"
                 android:layout_marginLeft="10dp"
                 android:layout_centerVertical="true"
                 android:textSize="16sp"
@@ -78,6 +93,93 @@
                 style="@style/TwoWayView"
                 android:drawSelectorOnTop="false"
                 tools:context=".ManageGroupDialog"/>
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/container_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/group_rl">
+
+            <View
+                android:id="@+id/line_group"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentTop="true"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/gray"/>
+
+            <RelativeLayout
+                android:id="@+id/button_rl_group"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_below="@id/line_group"
+                android:visibility="gone">
+
+
+                <RelativeLayout
+                    android:id="@+id/back_group_rl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="10dp"
+                    android:clickable="true">
+
+                    <ImageView
+                        android:id="@+id/image_back_group"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_alignParentLeft="true"
+                        android:layout_centerVertical="true"
+                        android:background="@android:drawable/ic_menu_revert"
+                        android:backgroundTint="@color/gray"/>
+
+                    <TextView
+                        android:id="@+id/back_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_toRightOf="@id/image_back_group"
+                        android:layout_centerVertical="true"
+                        android:text="@string/discard"
+                        android:textSize="12sp"
+                        android:textColor="@color/gray"
+                        android:background="@color/transparent"/>
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/save_group_rl"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="10dp"
+                    android:clickable="true">
+
+                    <ImageView
+                        android:id="@+id/image_save_group"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
+                        android:layout_centerVertical="true"
+                        android:background="@android:drawable/ic_menu_save"
+                        android:backgroundTint="@color/gray"/>
+
+                    <TextView
+                        android:id="@+id/delete_group"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toRightOf="@id/image_save_group"
+                        android:text="@string/save"
+                        android:textSize="12sp"
+                        android:textColor="@color/gray"
+                        android:background="@color/transparent"/>
+
+                </RelativeLayout>
+
+            </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
 
