--- a/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_detail_dialog.xml
@@ -68,6 +68,7 @@
             android:id="@+id/button_rl_detail"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
+            android:layout_centerInParent="true"
             android:layout_below="@id/line">
 
 
