--- a/Android/FamilyParking2/app/src/main/res/layout/group_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/group_item.xml
@@ -89,10 +89,10 @@
             xmlns:tools="http://schemas.android.com/tools"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/group_list"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="60dp"
             android:layout_centerVertical="true"
-            android:layout_toLeftOf="@id/check_group_bt"
+            android:layout_alignParentLeft="true"
             android:listSelector="@android:color/transparent"
             android:cacheColorHint="@android:color/transparent"
             style="@style/TwoWayView"
