--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_car.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_car.xml
@@ -2,13 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/soft_gray_transparent"
     tools:context=".MainActivity$Car">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="CAR"/>
+    <ListView
+        android:id="@+id/car_lv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_margin="10dp"
+        android:divider="@null"/>
 
 </RelativeLayout>
 
