--- a/Android/FamilyParking2/app/src/main/res/layout/fragment_manage_group.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/fragment_manage_group.xml
@@ -76,13 +76,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
+                    android:layout_alignParentLeft="true"
                     android:layout_marginTop="5dp"
                     android:visibility="gone"
                     android:layout_below="@id/relative_insert_name_group">
                     <Spinner
                         android:id="@+id/car_sp"
-                        android:layout_width="75dp"
-                        android:layout_height="55dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"/>
                 </RelativeLayout>
 
