--- a/Android/FamilyParking2/app/src/main/res/layout/car_group_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/car_group_item.xml
@@ -5,36 +5,56 @@
     android:orientation="vertical"
     android:padding="5dp">
 
-    <RadioButton
-        android:id="@+id/car_radio_button"
+    <RelativeLayout
+        android:id="@+id/container_car_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:visibility="gone"/>
+        android:layout_alignParentTop="true">
 
-    <ImageView
-        android:id="@+id/car_logo_item_iv"
-        android:layout_width="52dp"
-        android:layout_height="52dp"
-        android:layout_centerVertical="true"
-        android:background="@drawable/alfa_romeo"
-        android:layout_toRightOf="@id/car_radio_button"/>
+        <RadioButton
+            android:id="@+id/car_radio_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/car_name_item_tv"
+        <ImageView
+            android:id="@+id/car_logo_item_iv"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_centerVertical="true"
+            android:background="@drawable/alfa_romeo"
+            android:layout_toRightOf="@id/car_radio_button"/>
+
+        <TextView
+            android:id="@+id/car_name_item_tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_centerVertical="true"
+            android:textSize="16sp"
+            android:textColor="@color/black"
+            android:inputType="textCapSentences"
+            android:textColorHint="@color/gray"
+            android:background="@color/transparent"
+            android:singleLine="true"
+            android:text="Giulietta"
+            android:layout_toRightOf="@id/car_logo_item_iv"/>
+
+    </RelativeLayout>
+
+    <Button
+        android:id="@+id/add_car_button_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_centerVertical="true"
-        android:textSize="16sp"
+        android:layout_centerInParent="true"
+        android:text="@string/add_car"
+        android:textSize="15sp"
         android:textColor="@color/black"
-        android:inputType="textCapSentences"
-        android:textColorHint="@color/gray"
-        android:background="@color/transparent"
-        android:singleLine="true"
-        android:text="Giulietta"
-        android:layout_toRightOf="@id/car_logo_item_iv"/>
+        android:clickable="true"
+        android:visibility="gone"
+        android:background="@color/transparent"/>
 
 
 </RelativeLayout>
