--- a/Android/FamilyParking2/app/src/main/res/layout/contact_group_item.xml
+++ b/Android/FamilyParking2/app/src/main/res/layout/contact_group_item.xml
@@ -12,6 +12,20 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/user"/>
 
+    <TextView
+        android:id="@+id/group_contact_image_tv"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:visibility="gone"
+        android:layout_alignParentLeft="true"
+        android:layout_centerHorizontal="true"
+        android:textAlignment="center"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        android:textColor="@color/white"
+        android:background="@drawable/add_group"/>
+
 </RelativeLayout>
 
 
